--- a/hrms/package.json
+++ b/hrms/package.json
@@ -9,6 +9,8 @@
     "antd": "^5.20.6",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-datepicker": "^7.3.0",
