--- a/hrms/package.json
+++ b/hrms/package.json
@@ -16,6 +16,7 @@
     "dayjs": "^1.11.13",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-datepicker": "^7.3.0",
