--- a/hrms/package.json
+++ b/hrms/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@date-io/date-fns": "^3.0.0",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.10",
     "@mui/lab": "^6.0.0-beta.14",
     "@mui/material": "^6.1.5",
     "@mui/x-date-pickers": "^7.21.0",
@@ -14,7 +14,6 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.20.6",
     "axios": "^1.7.7",
-    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "html2canvas": "^1.4.1",
